v1.3 - Fixed issue regarding permissions;